--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<section class="jumbotron text-center">
+	<div class="container">
+		<h1 class="jumbotron-heading">My Products</h1>
+		<p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+		<p>
+  <%= link_to 'Create New Product', new_product_path, class: 'btn btn-primary' %>
+	</p><br>
+
+	</div>
+</section>
