--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>EcommerceApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name ='keywords' content="<%= @seo_keywords %>"/>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +14,20 @@
   </head>
 
   <body>
-        <%= render 'layouts/shared/application_nav' %>
-    <%= yield %>
+      <%= render 'layouts/shared/application_nav' %>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <%= yield %>
+            </div>
+          </div>
+          <footer>
+            <p>&copy; Company 2019</p>
+          </footer>
+          
+        </div>
+
+
   </body>
 </html>
+
