--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Home Page</h1>
+<div class= ".about_image">
+	<main role="main" class="inner cover">
+		<h1 class="cover-heading">Welcome</h1>
+		<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+		<p class="lead">
+			<%= link_to 'About', new_user_session_path, class: "btn btn-lg btn-secondary"%>
+		</p>
+	</main>
+</div>
