--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,33 +10,41 @@
       </ul>
     </div>
   <% end %>
+    <div class= "row">
+      <div class="col-md-8">
+        <div class="form-group">
+          <%= form.label :title %>
+          <%= form.text_field :title, class: 'form-control' %>
+        </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+        <div class="form-group">
+          <%= form.label :description %>
+          <%= form.text_area :description, class: 'form-control' %>
+        </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+        <div class="form-group">
+          <%= form.label :price %>
+          <%= form.text_field :price %>
+        </div>
 
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
+        <div class="form-group">
+          <label class= 'btn btn-primary'>
+            Upload Main image <%= form.file_field :main_image, style: "display:none;" %>
+          </label>
+        </div>
 
-  <div class="field">
-    <%= form.label :main_image %>
-    <%= form.text_area :main_image %>
-  </div>
+        <div class="form-group">
+          <label class= 'btn btn-primary'>
+            Upload Thumb image <%= form.file_field :thumb_image, style: "display:none;" %>
+          </label>
+        </div>
 
-  <div class="field">
-    <%= form.label :thumb_image %>
-    <%= form.text_area :thumb_image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+        <div class="form-group">
+          <%= form.submit 'Save Portfolio Item', class: 'btn btn-primary ' %>
+        </div>
+      </div>
+    </div>
 <% end %>
+
+
+
