--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body>
       <%= render 'layouts/shared/application_nav' %>
+      <div class="background-image">
         <div class="container">
           <div class="row ">
             <div class="col-lg-12">
@@ -23,6 +24,7 @@
           </div>
           
         </div>
+      </div>
 
 
   </body>
