--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<h1>Would you like to work together?</h1>
+<h1 style="margin-top: 3rem; margin-left: 4rem;">Would you like to work together?</h1>
 
 <hr>
 
@@ -12,9 +12,9 @@
 
     <p><%= number_to_phone "9398274181" %></p>
 
-    <h3>Email</h3>
+    <h3 >Email</h3>
 
-    <p><a href="sathyteja@trikatechnologies,com" "Email me">Email me</a> </p>
+    <p ><a href="sathyteja@trikatechnologies.com" style="color: black;">Email me</a> </p>
   </div>
 
   <div class= "col-md-5">
