--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+
 .site-header {
   background-color: rgba(0, 0, 0, .85);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
@@ -73,6 +74,7 @@
     max-width: 100%;
     text-align: center;
     margin-top: 3rem;
+    text-align: center;
  }
 }
 
@@ -99,7 +101,7 @@
   z-index: -400;
   -webkit-transform: translateX(-30%) translateY(-70%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('background-image.jpg') no-repeat;
+  background: image-url('application_image.jpg') no-repeat;
   background-size: cover;
 }
 .first-slide-image {
@@ -112,4 +114,134 @@
 }
 .slide1-font {
   color: orangered;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  color: black;
+  text-align: center;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+
+.site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+  box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+}
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+  color: white;
+}
+.cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 1rem;
+}
+
+
+/*
+* Header
+*/
+
+.masthead {
+  margin-bottom: 1rem;
+
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: bold;
+  color: rgba(255,255,255,.5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+
+/*
+* Cover
+*/
+
+.cover {
+  padding: 0 1.5rem;
+  text-align: center;
+  margin-top: 6rem;
+}
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: bold;
+}
+
+
+.col-md-7 {
+  flex: 0 0 58.33333%;
+  max-width: 58.33333%;
+  text-align: center;
+}
+
+
+/*
+* links
+*/
+.link {
+  color: black;
+}
+
+/*
+* link to back
+*/
+.auth-links {
+  color: black;
+}
+
+.login > .card-block {
+  width: 22rem;
+  margin: 0 auto;
+}
+.shared-links {
+  color: black;
+}
+.login-links {
+  text-align: center;
+  margin-top: 4rem;
 }
