--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,14 @@
             </div>
               <%= render 'layouts/shared/application_nav' %>
               <%= yield %>
+              <%= render 'layouts/shared/application_footer'%> <!-- provides footer -->
+
             </div>
 
           </div>
 
         </div>
-        
+
   </body>
 </html>
 
