Integrated About page in application
- Added a image for about page
- Generated a route to about page
- About and Contact links are added to application navbar

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,6 @@
-<%= render "layouts/shared/products_carousel"%>
-<%= render partial: 'product_item' %>
+<div class="album text-muted">
+  <div class="container">
+	<%= render "layouts/shared/products_carousel"%>
+	<%= render partial: 'product_item', collections: "@product_items"%>
+  </div>
+</div>
