--- a/app/views/layouts/shared/_application_nav.html.erb
+++ b/app/views/layouts/shared/_application_nav.html.erb
@@ -8,8 +8,10 @@
 		 <%= link_to current_user.email, user_session_path(current_user) %>
 		 <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-item" %>
 	<% else %>
-		<%= link_to 'Login', new_user_session_path, class: "nav-item" %>
-		<%= link_to 'Register', new_user_registration_path, class: "nav-item" %>
+		<%= link_to 'About', pages_about_path, class: 'nav-link'%>
+		<%= link_to 'Contact', pages_contact_path, class: 'nav-link' %>
+		<%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+		<%= link_to 'Register', new_user_registration_path, class: "nav-link" %>
 	<% end %>
 	
   </div>
