--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,13 +28,13 @@
         </div>
 
         <div class="form-group">
-          <label class= 'btn btn-primary'>
+          <label class= 'btn btn-primary btn-sm'>
             Upload Main image <%= form.file_field :main_image, style: "display:none;" %>
           </label>
         </div>
 
         <div class="form-group">
-          <label class= 'btn btn-primary'>
+          <label class= 'btn btn-primary btn-sm'>
             Upload Thumb image <%= form.file_field :thumb_image, style: "display:none;" %>
           </label>
         </div>
