Implemented carrier wave gem in the application
- Installed carrier wave gem
- Implemented mount uploader in products model.
- Refactored the application and products styles.
- Given styles for products new, create, edit pages.
- Used local storage to upload image.

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -83,3 +83,26 @@
   color: orangered;
 }
 
+.card {
+  float: left;
+  width: 33.333%;
+  padding: .75rem;
+  margin-bottom: 2rem;
+  border: 0;
+}
+
+.card > img {
+  margin-bottom: .75rem;
+}
+
+.card-text {
+  font-size: 85%;
+}
+
+.margin-top {
+  margin-top: 3rem;
+}
+
+.center {
+  text-align: center;
+}
