--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,8 +10,8 @@
       </ul>
     </div>
   <% end %>
-    <div class= "row">
-      <div class="col-md-8">
+    <div class= "container">
+      <div class="col-md-12">
         <div class="form-group">
           <%= form.label :title %>
           <%= form.text_field :title, class: 'form-control' %>
@@ -19,7 +19,7 @@
 
         <div class="form-group">
           <%= form.label :description %>
-          <%= form.text_area :description, class: 'form-control' %>
+          <%= form.text_area :description, class: 'form-control',rows: 4 %>
         </div>
 
         <div class="form-group">
@@ -27,24 +27,19 @@
           <%= form.text_field :price %>
         </div>
 
-        <div class="form-group">
+        <div class="form-group center">
           <label class= 'btn btn-primary btn-sm'>
             Upload Main image <%= form.file_field :main_image, style: "display:none;" %>
           </label>
-        </div>
 
-        <div class="form-group">
           <label class= 'btn btn-primary btn-sm'>
             Upload Thumb image <%= form.file_field :thumb_image, style: "display:none;" %>
           </label>
         </div>
 
-        <div class="form-group">
+        <div class="form-group center">
           <%= form.submit 'Save Portfolio Item', class: 'btn btn-primary ' %>
         </div>
       </div>
     </div>
 <% end %>
-
-
-
