--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Product</h1>
+<div class= "margin-top">
+	<h1 class= "center">Editing Product</h1>
 
-<%= render 'form', product: @product %>
+	<%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+	<p class= "center">
+		<%= link_to 'Show', @product %>|
+		<%= link_to 'Back', products_path %>		
+	</p>
+</div>
